--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ section{
 
 .container{
     padding: 50px 0;
+    width: 100%;
 }
 
 .row{
@@ -52,6 +53,7 @@ section{
 
 .click{
     transition: all 300ms ease;
+    cursor: pointer;
 }
 
 .click:hover{
@@ -62,6 +64,67 @@ section{
     transform: scale(0.8);
 }
 
+.link__hover-effect{
+    position: relative;
+}
+
+.link__hover-effect:after{
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    height: 3px;
+    width: 0;
+    right: 0;
+    transition: all 400ms ease;
+}
+
+.link__hover-effect--white:after{
+    background-color: #fff;
+}
+
+.link__hover-effect--black:after{
+    background-color: #242424;
+}
+
+.link__hover-effect:hover:after {
+    left: 0;
+    width: 100%;
+}
+
+input,
+textarea{
+    width: 100%;
+    background-color: #242424;
+    color: #fff;
+    outline: none;
+    border: 3px solid #c0c4cc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 40px;
+    transition: all 300ms ease;
+}
+
+input:hover, 
+textarea:hover{
+    border-color:#dcdfe6 ;
+}
+
+input:focus,
+textarea:focus{
+    border-color: #A441F7;
+}
+
+textarea{
+    resize: vertical;
+    height: 100px;
+    margin-top: 8px;
+}
+
+label{
+    font-size: 14px;
+    font-weight: bold;
+}
 
 /* Lanidng Page */
 
@@ -198,8 +261,18 @@ nav{
     margin-bottom: 60px;
 }
 
+.project{
+    margin-bottom: 100px;
+}
+
 .project__img{
     width: 100%;
+    transition: all 600ms ease;
+}
+
+.project:hover .project__img{
+    transform: scale(1.07);
+    filter: blur(5px);
 }
 
 .project__wrapper{
@@ -209,10 +282,7 @@ nav{
     overflow: hidden;
 }
 
-.project__wrapper:hover .project__img{
-    transform: scale(1.07);
-    filter: blur(5px);
-}
+
 
 .project__wrapper:hover .project__description{
     opacity: 1;
@@ -263,3 +333,191 @@ nav{
     margin: 16px 0;
 }
 
+
+/* Footer */
+
+footer{
+    background-color: #242424;
+    display: flex;
+    padding: 6% 0% ;
+}
+
+.footer__row{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer__logo-img{
+    width: 70px;
+}
+
+.footer__social--list{
+    width: 100%;
+    max-width:  500px;
+    display: flex;
+    justify-content: space-around;
+    margin: 28px 0;
+}
+
+.footer__social--link,
+.footer__copyright{
+    color: white;
+}
+
+/* Modal */
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    max-width: 1100px;
+    height: 700px;
+    box-shadow: 0 20px 80px 0 rgb( 0, 0, 0, 0.55);
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+}
+
+.modal__half{
+    width: 50%;
+    padding: 40px 72px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.modal__about {
+    background-color: rgb(245, 245, 245);
+}
+
+.modal__languages{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.modal__language{
+    width: calc(100% / 3);
+    padding: 16px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal__language:hover .language__name{
+    transform: scale(1);
+}
+
+.language__name{
+    position: absolute;
+    bottom: -10px;
+    transform: scale(0);
+    transition: all 500ms ease;
+}
+
+.modal__language--img{
+    max-width: 100%;
+    transition: all 500ms ease;
+}
+
+.modal__language--img:hover{
+    transform: scale(0.9);
+    filter: brightness(80%);
+}
+
+.modal__contact{
+    background-color: #242424;
+    color: white;
+}
+
+.modal__title{
+    font-size: 26px;
+}
+
+.modal__sub-title{
+    margin: 12px 0 24px 0;
+    font-size: 14px;
+}
+
+.modal__para{
+    margin-bottom: 12px;
+    line-height: 1.75;
+}
+
+.form__item{
+    margin-bottom: 20px;
+}
+
+.form__submit{
+    background-color: #A441F7;
+    border: 2px solid #A441F7;
+    color: #fff;
+    font-weight: 700;
+    width: 100%;
+    max-width: 240px;
+    padding: 12px 24px;
+    font-size: 20px;
+    transition: all 300ms ease;
+}
+
+.form__submit:hover{
+    border-color: #fff;
+    background-color: transparent;
+}
+
+.form__submit:active{
+    border-color: #A441F7;
+    color: #A441F7;
+}
+
+.modal__overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal__overlay--loading{
+    background-color: #242424;
+    font-size: 80px;
+    z-index: -1;
+}
+
+.modal__overlay--success{
+    background-color: #4bb543;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    padding: 28px;
+    z-index: -1;
+}
+
+.fa-spinner{
+    animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner{
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(350deg);
+    }
+}
+
+.modal__exit{
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: #fff;
+    font-size: 36px;
+    z-index: 100;
+}
