--- a/style.css
+++ b/style.css
@@ -350,7 +350,9 @@ footer{
 
 .footer__logo-img{
     width: 70px;
+    font-size: 80px;
 }
+
 
 .footer__social--list{
     width: 100%;
@@ -483,12 +485,12 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 
 .modal__overlay--loading{
     background-color: #242424;
     font-size: 80px;
-    z-index: -1;
 }
 
 .modal__overlay--success{
@@ -498,6 +500,10 @@ footer{
     text-align: center;
     padding: 28px;
     z-index: -1;
+}
+
+.modal__overlay--visible{
+    z-index: 1;
 }
 
 .fa-spinner{
