--- a/style.css
+++ b/style.css
@@ -1,80 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto" , sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 html {
     scroll-behavior: smooth;
-  }
+}
 
-li{
+li {
     list-style-type: none;
 }
 
-p{
+p {
     line-height: 1.5;
     font-size: 16px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-button{
+button {
     cursor: pointer;
 }
 
-section{
+section {
     background-color: rgb(245, 245, 245);
     transition: all 500ms ease;
 }
 
-.container{
+.container {
     padding: 50px 0;
     width: 100%;
 }
 
-.row{
+.row {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 12px;
 }
 
-.purple{
+.purple {
     color: #A441F7;
     font-weight: 700;
 }
 
-.title{
+.title {
     font-size: 60px;
     margin-bottom: 12px;
     text-align: left;
     line-height: 1;
 }
 
-.click{
+.click {
     transition: all 300ms ease;
     cursor: pointer;
 }
 
-.click:hover{
+.click:hover {
     transform: scale(1.1);
 }
 
-.click:active{
+.click:active {
     transform: scale(0.8);
 }
 
-.link__hover-effect{
+.link__hover-effect {
     position: relative;
 }
 
-.link__hover-effect:after{
+.link__hover-effect:after {
     content: "";
     position: absolute;
     bottom: -3px;
@@ -84,7 +84,7 @@ section{
     transition: all 400ms ease;
 }
 
-.link__hover-effect:after{
+.link__hover-effect:after {
     background-color: #A441F7;
 }
 
@@ -95,7 +95,7 @@ section{
 }
 
 input,
-textarea{
+textarea {
     width: 100%;
     background-color: #242424;
     color: #fff;
@@ -108,30 +108,30 @@ textarea{
     transition: all 300ms ease;
 }
 
-input:hover, 
-textarea:hover{
-    border-color:#dcdfe6 ;
+input:hover,
+textarea:hover {
+    border-color: #dcdfe6;
 }
 
 input:focus,
-textarea:focus{
+textarea:focus {
     border-color: #A441F7;
 }
 
-textarea{
+textarea {
     resize: vertical;
     height: 100px;
     margin-top: 8px;
 }
 
-label{
+label {
     font-size: 14px;
     font-weight: bold;
 }
 
 nav,
 .scroll,
-.header{
+.header {
     opacity: 1;
     visibility: visible;
     transition: all 600ms 800ms;
@@ -139,7 +139,7 @@ nav,
 
 .modal--open nav,
 .modal--open .scroll,
-.modal--open .header{
+.modal--open .header {
     opacity: 0;
     visibility: hidden;
     transition: all 400ms;
@@ -150,38 +150,38 @@ nav,
 .dark-theme .section__sub-title,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-adjust,
-.dark-theme .header__para{
+.dark-theme .header__para {
     color: #fff;
 }
 
-.dark-theme section{
+.dark-theme section {
     background-color: #242424;
 }
 
-.dark-theme #personal-logo{
+.dark-theme #personal-logo {
     filter: none;
 }
 
-.dark-theme .scroll__icon{
+.dark-theme .scroll__icon {
     border-color: #fff;
 }
 
-.dark-theme .scroll__icon:after{
+.dark-theme .scroll__icon:after {
     background-color: #fff;
 }
 
-.dark-theme .mail__btn{
+.dark-theme .mail__btn {
     background-color: #fff;
     color: #242424;
 }
 
 /* Lanidng Page */
 
-#landing-page{
+#landing-page {
     min-height: 100vh;
 }
 
-.header{
+.header {
     margin-top: 100px;
     position: absolute;
     top: 50%;
@@ -192,13 +192,13 @@ nav,
     padding: 0 30px;
 }
 
-.header__para{
+.header__para {
     font-size: 24px;
     line-height: 2;
     max-width: 450px;
 }
 
-.header__para a{
+.header__para a {
     color: #A441F7;
 }
 
@@ -221,7 +221,7 @@ nav,
     border-radius: 50%;
 }
 
-.mail__btn{
+.mail__btn {
     z-index: 100;
     width: 70px;
     height: 70px;
@@ -236,14 +236,14 @@ nav,
     box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
 }
 
-.scroll{
+.scroll {
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.scroll__icon{
+.scroll__icon {
     width: 20px;
     height: 30px;
     border: 2px solid black;
@@ -253,7 +253,7 @@ nav,
     justify-content: center;
 }
 
-.scroll__icon:after{
+.scroll__icon:after {
     content: "";
     width: 4px;
     height: 6px;
@@ -262,24 +262,25 @@ nav,
     animation: scroll 1000ms infinite alternate-reverse;
 }
 
-@keyframes scroll{
+@keyframes scroll {
     0% {
         transform: translateY(3px);
     }
-    100%{
+
+    100% {
         transform: translateY(-3px);
     }
 }
 
-/* Navigation */ 
+/* Navigation */
 
-#personal-logo{
+#personal-logo {
     width: auto;
     height: 50px;
 }
 
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -290,47 +291,47 @@ nav{
     padding: 0 20px;
 }
 
-.nav__link--list{
+.nav__link--list {
     display: flex;
 }
 
-.nav__link{
+.nav__link {
     margin: 0 12px;
 }
 
-.nav__link--anchor{
+.nav__link--anchor {
     font-size: 16px;
     color: #242424;
     font-weight: 700;
 }
 
-.fa-adjust{
+.fa-adjust {
     font-size: 20px;
 }
 
 /* Projects */
 
-.section__title{
+.section__title {
     text-align: center;
     font-size: 48px;
     margin-bottom: 60px;
 }
 
-.project{
+.project {
     margin-bottom: 100px;
 }
 
-.project__img{
+.project__img {
     width: 100%;
     transition: all 600ms ease;
 }
 
-.project:hover .project__img{
+.project:hover .project__img {
     transform: scale(1.07);
     filter: blur(5px);
 }
 
-.project__wrapper{
+.project__wrapper {
     position: relative;
     border-radius: 20px;
     box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
@@ -339,12 +340,12 @@ nav{
 
 
 
-.project__wrapper:hover .project__description{
+.project__wrapper:hover .project__description {
     opacity: 1;
     transform: translateY(-50%);
 }
 
-.project__description{
+.project__description {
     position: absolute;
     top: 50%;
     left: 90px;
@@ -355,11 +356,11 @@ nav{
     max-width: 550px;
 }
 
-.project__wrapper:hover .project__wrapper--bg{
+.project__wrapper:hover .project__wrapper--bg {
     opacity: 0.7;
 }
 
-.project__wrapper--bg{
+.project__wrapper--bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -370,62 +371,62 @@ nav{
     transition: all 500ms ease;
 }
 
-.project__description--title{
+.project__description--title {
     font-size: 30px;
 }
 
-.project__description--sub-title{
+.project__description--sub-title {
     margin-top: 8px;
 }
 
-.project__description--link{
+.project__description--link {
     color: white;
     font-size: 20px;
     margin-right: 16px;
 }
 
-.project__description--para{
+.project__description--para {
     margin: 16px 0;
 }
 
 
 /* Footer */
 
-footer{
+footer {
     position: relative;
     background-color: #242424;
     display: flex;
-    padding: 6% 0% ;
+    padding: 6% 0%;
 }
 
-.footer__row{
+.footer__row {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.footer__logo-img{
+.footer__logo-img {
     width: 70px;
     font-size: 80px;
 }
 
 
-.footer__social--list{
+.footer__social--list {
     width: 100%;
-    max-width:  500px;
+    max-width: 500px;
     display: flex;
     justify-content: space-around;
     margin: 28px 0;
 }
 
 .footer__social--link,
-.footer__copyright{
+.footer__copyright {
     color: white;
 }
 
 /* Modal */
 
-.modal{
+.modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -441,13 +442,13 @@ footer{
     transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
 }
 
-.modal--open .modal{
+.modal--open .modal {
     z-index: 60;
-    box-shadow: 0 20px 80px 0 rgb( 0, 0, 0, 0.55);
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
     visibility: visible;
 }
 
-.modal__half{
+.modal__half {
     width: 50%;
     padding: 40px 72px;
     display: flex;
@@ -458,7 +459,7 @@ footer{
 }
 
 .modal--open .modal__about,
-.modal--open .modal__contact{
+.modal--open .modal__contact {
     transform: translateX(0%);
 }
 
@@ -467,12 +468,12 @@ footer{
     transform: translateX(-110%);
 }
 
-.modal__languages{
+.modal__languages {
     display: flex;
     flex-wrap: wrap;
 }
 
-.modal__language{
+.modal__language {
     width: calc(100% / 3);
     padding: 16px;
     position: relative;
@@ -481,53 +482,53 @@ footer{
     align-items: center;
 }
 
-.modal__language:hover .language__name{
+.modal__language:hover .language__name {
     transform: scale(1);
 }
 
-.language__name{
+.language__name {
     position: absolute;
     bottom: -10px;
     transform: scale(0);
     transition: all 500ms ease;
 }
 
-.modal__language--img{
+.modal__language--img {
     max-width: 100%;
     transition: all 500ms ease;
 }
 
-.modal__language--img:hover{
+.modal__language--img:hover {
     transform: scale(0.9);
     filter: brightness(80%);
 }
 
-.modal__contact{
+.modal__contact {
     background-color: #242424;
     color: white;
     transform: translateX(110%);
     transition: all 500ms ease-in;
 }
 
-.modal__title{
+.modal__title {
     font-size: 26px;
 }
 
-.modal__sub-title{
+.modal__sub-title {
     margin: 12px 0 24px 0;
     font-size: 14px;
 }
 
-.modal__para{
+.modal__para {
     margin-bottom: 12px;
     line-height: 1.75;
 }
 
-.form__item{
+.form__item {
     margin-bottom: 20px;
 }
 
-.form__submit{
+.form__submit {
     background-color: #A441F7;
     border: 2px solid #A441F7;
     color: #fff;
@@ -539,17 +540,17 @@ footer{
     transition: all 300ms ease;
 }
 
-.form__submit:hover{
+.form__submit:hover {
     border-color: #fff;
     background-color: transparent;
 }
 
-.form__submit:active{
+.form__submit:active {
     border-color: #A441F7;
     color: #A441F7;
 }
 
-.modal__overlay{
+.modal__overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -561,12 +562,12 @@ footer{
     z-index: -1;
 }
 
-.modal__overlay--loading{
+.modal__overlay--loading {
     background-color: #242424;
     font-size: 80px;
 }
 
-.modal__overlay--success{
+.modal__overlay--success {
     background-color: #4bb543;
     font-size: 40px;
     font-weight: 700;
@@ -575,25 +576,26 @@ footer{
     z-index: -1;
 }
 
-.modal__overlay--visible{
+.modal__overlay--visible {
     z-index: 1;
     display: flex;
 }
 
-.fa-spinner{
+.fa-spinner {
     animation: spinner 750ms infinite linear;
 }
 
-@keyframes spinner{
-    0%{
+@keyframes spinner {
+    0% {
         transform: rotate(0);
     }
-    100%{
+
+    100% {
         transform: rotate(350deg);
     }
 }
 
-.modal__exit{
+.modal__exit {
     position: absolute;
     top: 30px;
     right: 40px;
@@ -608,111 +610,117 @@ Shapes
 
 */
 
-.shape{
+.shape {
     position: fixed;
 }
 
-.shape--0{
+.shape--0 {
     top: 15vh;
     left: 5vw;
 }
 
-.shape--1{
+.shape--1 {
     top: 15vh;
     left: 50vw;
 }
 
-.shape--2{
+.shape--2 {
     top: 15vh;
     left: 80vw;
 }
 
-.shape--3{
+.shape--3 {
     top: 50vh;
     left: 5vw;
 }
 
-.shape--4{
+.shape--4 {
     top: 50vh;
     left: 50vw;
 }
 
-.shape--5{
+.shape--5 {
     top: 50vh;
     left: 80vw;
 }
 
-.shape--6{
-    top:80vh;
+.shape--6 {
+    top: 80vh;
     left: 5vw;
 }
 
-.shape--7{
-    top:80vh;
+.shape--7 {
+    top: 80vh;
     left: 50vw;
 }
 
-.shape--8{
-    top:80vh;
+.shape--8 {
+    top: 80vh;
     left: 80vw;
 }
 
 
 /* Responsiveness */
 
-@media (max-width: 768px){
-    .title{
+/* Small phones and tablets */
+@media (max-width: 768px) {
+    .title {
         font-size: 80px;
     }
 
-.header__para{
-    font-size: 20px;
+    .header__para {
+        font-size: 20px;
+    }
+
+    .modal {
+        top: 0;
+        left: 0;
+        transform: none;
+        height: auto;
+        width: 100%;
+        flex-direction: column-reverse;
+        border-radius: 0;
+    }
+
+    .modal__half {
+        width: 100%;
+    }
 }
 
-.modal{
-    top: 0;
-    left: 0;
-    transform: none;
-    height: auto;
-    width: 100%;
-    flex-direction: column-reverse;
-    border-radius: 0;
-}
-
-.modal__half {
-    width: 100%;
-}
-}
-
-@media (max-width: 480px){
-    .title{
+/* Small phones */
+@media (max-width: 480px) {
+    .title {
         font-size: 52px;
     }
-    .header__para{
+
+    .header__para {
         font-size: 18px;
     }
-    .nav__link:first-child{
+
+    .nav__link:first-child {
         display: none;
     }
-    .project__description--para{
+
+    .project__description--para {
         display: none;
     }
-    .project__description{
+
+    .project__description {
         left: 0;
         padding: 0;
         width: 100%;
         text-align: center;
     }
-    .project__description--sub-title{
+
+    .project__description--sub-title {
         margin-bottom: 8px;
     }
-    .modal__half{
+
+    .modal__half {
         padding: 40px;
     }
+
+    .shape{
+        display: none;
+    }
 }
-
-
-
-
-
-
